use ':' instead of '->' as separator between the non terminal and the body of a production